--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,13 @@
-<p id="notice"><%= notice %></p>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
 
-<h1>Listing Products</h1>
+<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,700' rel='stylesheet' type='text/css'>
 
-<table>
+
+<div class="header">
+<h1>Products</h1>
+</div>
+<!--<table>
   <thead>
     <tr>
       <th>Title</th>
@@ -14,26 +19,33 @@
       <th>Price</th>
       <th colspan="3"></th>
     </tr>
-  </thead>
+  </thead> -->
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.title %></td>
-        <td><%= product.description %></td>
-        <td><%= product.quantity %></td>
-        <td><%= product.category %></td>
-        <td><%= product.subcategory %></td>
-        <td><%= product.image %></td>
-        <td><%= product.price %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
+<body class="main">
+<% @products.in_groups_of(3, false).each do |group| %>
+<div class="row">
+    <% for product in group %>
+      <div class="col-md-4" style: "center-block">
+        <div><%= image_tag product.image_url(:index).to_s %></div>
+        <div><%= product.title %></div>
+        <div><% product.description %></div>
+        <div><% product.quantity %></div>
+        <div><% product.category %></div>
+        <div><% product.subcategory %></div>
+        <div>£<%= product.price %></div>
+        <% print %>
+          <div><%= link_to 'Show', product %>
+              <%= link_to 'Edit', edit_product_path(product) %>
+              <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <a href="/cart/<%= product.id %>"> Add to cart</a>
+          </div>
+      </div>
+      <% end %>
+    </div>
+    <% end %> 
+  
+<!--</table> -->
 <br>
 
 <%= link_to 'New Product', new_product_path %>
+</body>
