not workin version

--- a/app/views/partners/registrations/new.html.erb
+++ b/app/views/partners/registrations/new.html.erb
@@ -21,6 +21,13 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
+  <%= f.fields_for :store do |sf| %>
+    <%= sf.hidden_field :partner_id %>
+    <div class="field">
+      <%= sf.file_field :image_url %>
+    </div>
+  <% end %>
+
   <div class="actions">
     <%= f.submit "Sign up" %>
   </div>
