rename field image_url to image on stores

--- a/app/views/partners/registrations/new.html.erb
+++ b/app/views/partners/registrations/new.html.erb
@@ -23,7 +23,8 @@
 
   <%= f.fields_for :store do |sf| %>
     <div class="field">
-      <%= sf.file_field :image_url %>
+      <%= sf.label :image %><br>
+      <%= sf.file_field :image %>
     </div>
   <% end %>
 
