Brand bio & edit profile improvements
* Fix show store image as circle 150 x 150
* Add brand_bio field to store, maximum 140 chars
* Set permitted_params for devise registration#edit
* Improve edit profile form to show image, and remove

--- a/app/views/partners/registrations/new.html.erb
+++ b/app/views/partners/registrations/new.html.erb
@@ -26,6 +26,10 @@
       <%= sf.label :image %><br>
       <%= sf.file_field :image %>
     </div>
+    <div class="field">
+      <%= sf.label :brand_bio %><br>
+      <%= sf.text_field :brand_bio %>
+    </div>
   <% end %>
 
   <div class="actions">
