--- a/app/views/partners/registrations/edit.html.erb
+++ b/app/views/partners/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
@@ -26,6 +26,28 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
+
+  <%= f.fields_for :store do |sf| %>
+    <%= sf.hidden_field :id %>
+    <div class="field">
+      <%= sf.label :image %><br>
+      <%= sf.file_field :image %>
+    </div>
+    <% if resource.store.image? %>
+      <div class="field">
+        <%= image_tag(resource.store.image_url(:avatar).to_s, class: 'img-circle') %>
+        <%= sf.hidden_field :image_cache %>
+      </div>
+      <div class="field">
+          <%= sf.label :remove_image %>
+          <%= sf.check_box :remove_image %>
+      </div>
+    <% end %>
+    <div class="field">
+      <%= sf.label :brand_bio %><br>
+      <%= sf.text_field :brand_bio %>
+    </div>
+  <% end %>
 
   <div class="actions">
     <%= f.submit "Update" %>
