--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,45 +7,15 @@
 <div class="header">
 <h1>Products</h1>
 </div>
-<!--<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Quantity</th>
-      <th>Category</th>
-      <th>Subcategory</th>
-      <th>Image</th>
-      <th>Price</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead> -->
-
-<body class="main">
-<% @products.in_groups_of(3, false).each do |group| %>
-<div class="row">
-    <% for product in group %>
-      <div class="col-md-4" style: "center-block">
-        <div><%= image_tag product.image_url(:index).to_s %></div>
-        <div><%= product.title %></div>
-        <div><% product.description %></div>
-        <div><% product.quantity %></div>
-        <div><% product.category %></div>
-        <div><% product.subcategory %></div>
-        <div>£<%= product.price %></div>
-        <% print %>
-          <div><%= link_to 'Show', product %>
-              <%= link_to 'Edit', edit_product_path(product) %>
-              <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
-              <a href="/cart/<%= product.id %>"> Add to cart</a>
-          </div>
-      </div>
+<div class="main">
+  <% @products.in_groups_of(3, false).each do |group| %>
+    <div class="row">
+      <% for product in group %>
+        <%= render product %>
       <% end %>
     </div>
-    <% end %> 
-  
-<!--</table> -->
-<br>
+  <% end %>
 
-<%= link_to 'New Product', new_product_path %>
-</body>
+  <br>
+  <%= link_to 'New Product', new_product_path %>
+</div>
