changed to pg, User Auth model, code refactoring

--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -3,21 +3,21 @@
 
 <% if partner_signed_in? %>
 
-		<%= image_tag(current_partner.store.image_url(:avatar).to_s, class: 'img-circle') if current_partner.store.image? %>
+		<%= image_tag(current_user.store.image_url(:avatar).to_s, class: 'img-circle') if current_user.store.image? %>
 
 		<div class="bio">
-			<h3><%= current_partner.store.brand_name %></h3>
-			<h5>@<%= current_partner.username %></h5>
-			<h5><%= current_partner.store.brand_bio %></h5>
+			<h3><%= current_user.store.brand_name %></h3>
+			<h5>@<%= current_user.username %></h5>
+			<h5><%= current_user.store.brand_bio %></h5>
 			<h5><strong>0</strong> following &nbsp; &nbsp; <strong>10k</strong> followers</h5>
 		</div>
 
-		<strong><%= Time.now.strftime("%d %b %Y") %></strong>
+		<strong><%= Time.now.strftime("%d %b %Y") %></strong>	
 
 				
 				<h2 class="text-center">Orders</h2>
 				
-				<% current_partner.orders.where(:order => @order.line_items).each do |order| %>
+				<% current_user.orders.where(:order => @order.line_items).each do |order| %>
 					
 					<%= order.name %>
 					<%= order.email %>
