--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,34 +1,22 @@
-
-<% if partner_signed_in? %>
-
-<%= image_tag(current_partner.store.image_url(:avatar).to_s, class: 'img-circle') if current_partner.store.image? %>
-
-<div class="bio">
-	<h3><%= current_partner.store.brand_name %></h3>
-	<h5>@<%= current_partner.username %></h5>
-	<h5><%= current_partner.store.brand_bio %></h5>
-	<h5><strong>0</strong> following &nbsp; &nbsp; <strong>10k</strong> followers</h5>
-</div>
-
+<% if user_signed_in? %>
+	<%= image_tag(current_user.store.image_url(:avatar).to_s, class: 'img-circle') if current_user.store.image? %>
+	<div class="bio">
+		<h3><%= current_user.store.brand_name %></h3>
+		<h5>@<%= current_user.username %></h5>
+		<h5><%= current_user.store.brand_bio %></h5>
+		<h5><strong>0</strong> following &nbsp; &nbsp; <strong>10k</strong> followers</h5>
+	</div>
 	<div class="well" style="max-width:900px; margin-left:auto;margin-right:auto;margin-top:40px;">
-		<% current_partner.products.in_groups_of(3, false).each do |group| %>
+		<% current_user.products.in_groups_of(3, false).each do |group| %>
 		  <div class="row">
 		    <% for product in group %>
 		      <%= render product %>
 		    <% end %>
 		  </div>
 		<% end %>
-
-		
-
-
 	</div>
-<br />
-<%= link_to 'New Product', new_product_path %>
-
+	<br />
+	<%= link_to 'New Product', new_product_path %>
 <% else %>
-
-<%= render 'profile' %>
-
-
+	<%= render 'profile' %>
 <% end %>
