added paypal integration, ability to add and delete cards

--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -1,7 +1,7 @@
-<%= image_tag @partner.store.image_url(:avatar).to_s, class: 'img-circle' %> 
+<%#= image_tag @partner.store.image_url(:avatar).to_s, class: 'img-circle' %> 
 <div class="info">
 	<h4>@<%= @partner.username %></h4>
-	<h5><%= @partner.store.brand_bio %></h5>
+	<h5><%#= @partner.store.brand_bio %></h5>
 	<strong>0</strong> following &nbsp; &nbsp; <strong>10k</strong> followers
 </div>
 
