--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <div class="navbar-text pull-right">
       <% if user_signed_in? %>
         Logged in as <strong><%= link_to current_user.username %></strong> |
-        <%= link_to 'Profile', custom_user_path(current_user.username), :class => 'navbar-link' %> |
-        <%= link_to 'Edit profile', custom_edit_user_path(current_user.username), :class => 'navbar-link' %> |
+        <%= link_to 'Profile', profile_path(current_user.username), :class => 'navbar-link' %> |
+        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
         <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
       <% else %>
         <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
