--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -48,6 +48,10 @@
     <%= f.label :price %><br>
     <%= f.number_field :price, placeholder: '£ xx' %>
   </div>
+  <div class="field">
+    <%= f.label :delivery_price %><br>
+    <%= f.number_field :delivery_price, placeholder: '£ xx' %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
