--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -20,3 +20,11 @@
 <% else %>
 	<%= render 'profile' %>
 <% end %>
+
+<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      
+    </div>
+  </div>
+</div>
