--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,9 @@
     <div class="navbar-text pull-right">
       <% if user_signed_in? %>
         Logged in as <strong><%= link_to current_user.username %></strong> |
+        <%  if current_user.admin? %>
+          <%= link_to 'Invite User', new_user_invitation_path, :class => 'navbar-link' %> |
+        <% end %>
         <%= link_to 'Profile', profile_path(current_user.username), :class => 'navbar-link' %> |
         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
         <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
