--- a/app/views/partners/registrations/edit.html.erb
+++ b/app/views/partners/registrations/edit.html.erb
@@ -11,6 +11,7 @@
       <div class="field">
         <%= f.label :username %><br />
         <%= f.text_field :username, autofocus: true %>
+        <%= f.hidden_field :role, value: 'customer' %>
       </div>  
 
       <div class="field">
