--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -7,3 +7,19 @@
 	height: 100px;
 	width: 100px;
 }
+
+.order_form .field {
+	text-align: center;
+}
+
+.order_form .field input {
+	width: 300px;
+}
+
+.order_form .expiry_date input {
+	width: 50px;
+}
+
+.pull-left {
+	margin-left: 82px;
+}
