--- a/app/assets/stylesheets/partners.scss
+++ b/app/assets/stylesheets/partners.scss
@@ -1,3 +1,8 @@
+.img-rounded {
+	height: 160px;
+	width: 160px;
+}
+
 .log_in {
 	position: absolute;
 	margin-left: 90px;
@@ -6,7 +11,7 @@
 
 .sign_up {
 	position: absolute;
-	margin-left: 100px;
+	margin-left: 80px;
 	top: 15%
 }
 .link a {
