--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -6,3 +6,11 @@
 	height: 200px;
 	width: 180px;
 }
+
+/* .arrow-prev {
+	display: inline-block;
+}
+
+.arrow-next {
+	display: inline-block;
+}  */
