--- a/app/assets/stylesheets/carts.scss
+++ b/app/assets/stylesheets/carts.scss
@@ -2,31 +2,20 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.carts {
-margin-left: 20px;
-  .total_line {
-    text-align: right;
-    padding-right: 10px;
-  }
-  .total_line {
+
+  .total_line  {
+    display: inline;
     font-weight: bold;
   }
 
 .item_price {
-	padding-right: 60px;
+	margin-left: 100px;
 }
 
 .total_cell {
 	font-weight: bold;
-    border-top: 1px solid #595;
-    padding-left: 80px;
+  border-top: 1px solid #595;
 }
 
 
-.image img {
-	height: 90px;
-	width: 70px;
-	margin-left: 20px;
-}
 
-}
