--- a/app/assets/stylesheets/line_items.scss
+++ b/app/assets/stylesheets/line_items.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the line_items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.item_price {
+	padding-left: 30px;
+}
+
+.image img {
+	height: 100px;
+	width: 120px;
+	margin-left: 20px;
+}
+
+.itemqty, .itemtitle, .item_price {
+	position: relative;
+	top: -30px;
+}
