--- a/app/assets/stylesheets/products.css
+++ b/app/assets/stylesheets/products.css
@@ -1,11 +1,67 @@
+/* Show (modal)  */
+
+.active-slide {
+	display: block;
+}
+
+.modal-body p {
+	font-family: 'Roboto', sans-serif;
+	font-weight: 100;
+}
+.modal {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.lg {
+	position: relative;
+	left: 50px;
+}
+
+.lgcurrent {
+	margin-left: 32.5px;
+	display: none;
+}
+
+
+
+.arrow a:hover {
+	opacity: 0.6;
+} 
+
+.modal-body a:hover {
+	text-decoration: none;
+	background: none;
+} 
+
+a:focus {
+	outline: none;
+}
+
+/* Products view */
+.rrp {
+	color: red;
+	text-decoration: line-through;
+}
+
 .row {
 	font-family: 'Roboto', sans-serif;
 }
 
-img {
+.products img {
 	height: 350px;
 	width: 250px;
 	border-radius: .5em;
+}
+
+.product {
+	position: relative;
+	top: 0;
+}
+
+.current {
+	position: absolute;
+	top: 0;
 }
 
 .row {
