--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -3,7 +3,7 @@
     <h2 class="panel-title text-center">Add Credit Card</h2>
   </div>
 
-  <div class="panel-body edit-form">
+  <div class="panel-body edit-form card_form">
     <%= form_for @card do |f| %>
       <% if @card.errors.any? %>
         <ul>
@@ -16,14 +16,12 @@
         <%= f.label :number %><br />
         <%= f.text_field :number, placeholder: '4242424242424242' %>
       </div>
-      <div class="field">
-        <%= f.label :expire_year %><br />
-        <%= f.text_field :expire_year, placeholder: '2020' %>
+      <div class="field expiry_date">
+        <%= f.label :expiry_date %><br />
+        <%= f.text_field :expire_month, placeholder: 'mm' %>
+        <%= f.text_field :expire_year, placeholder: 'yy' %>
       </div>
-      <div class="field">
-        <%= f.label :expire_month %><br />
-        <%= f.text_field :expire_month, placeholder: '12' %>
-      </div>
+      
       <div class="field">
         <%= f.label :cvv2, 'CVV' %><br />
         <%= f.text_field :cvv2, placeholder: '123' %>
