--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,25 +7,35 @@
 
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,700' rel='stylesheet' type='text/css'>
 
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
   <body class="<%= controller.controller_name %>">
+
+  <div class="nav">
+
+   <a class="navbar center-block" style="max-width:50%; max-height: 100px;" href="/"><img class="brand center-block" src="/images/cropgrnblkexp2.png" style="max-height: 100px;"></a>
+
     <div class="navbar-text pull-right">
+
       <% if user_signed_in? %>
         Logged in as <strong><%= link_to current_user.username %></strong> |
         <%  if current_user.admin? %>
-          <%= link_to 'Invite User', new_user_invitation_path, :class => 'navbar-link' %> |
+          <%= link_to 'Invite User', new_user_invitation_path, :class => 'navbar-link link' %> |
         <% end %>
-        <%= link_to 'Profile', profile_path(current_user.username), :class => 'navbar-link' %> |
-        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        <%= link_to 'Profile', profile_path(current_user.username), :class => 'navbar-link link' %> |
+        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link link' %> |
+        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link link'  %>
       <% else %>
-        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %> |
+        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link btn'  %>
+        <%= link_to "Login", new_user_session_path, :class => 'navbar-link btn'  %> 
       <% end %>
     </div>
+
+  </div>
+
     <% if notice %>
       <p class="alert alert-success"><%= notice %></p>
     <% end %>
