--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,8 +1,3 @@
-<div class="panel panel-default" style="max-width:400px; margin-left:auto; margin-right:auto;">
-    <div class="panel-heading">
-    <h1 class="panel-title text-center">New Order</h1>
-    </div>
-  <div class="order">
       <%= form_for(@order) do |f| %>
         <% if @order.errors.any? %>
           <div id="error_explanation">
@@ -15,29 +10,91 @@
             </ul>
           </div>
         <% end %>
+
+        <div class="panel panel-default" style="max-width:500px; margin-left:auto; margin-right:auto;">
+        <div class="panel-heading">
+          <h1 class="panel-title text-center">Shipping Details</h1>
+        </div>
         <div class="panel-body order_form">
-               <div class="field">
-                  <%= f.label :name %><br>
-                  <%= f.text_field :name, size: 30 %>
+               <div class="field name">
+                  <%= f.text_field :name, size: 30, placeholder: 'Name: e.g. John Smith' %>
                 </div>
                 <div class="field">
-                  <%= f.label :address %><br>
-                  <%= f.text_area :address, rows: 3, cols: 30 %>
+                  <%= f.text_field :address, size: 30, placeholder: 'Address 1' %>
                 </div>
+
                 <div class="field">
-                  <%= f.label :email %><br>
-                  <%= f.text_field :email, size: 30 %>
+                  <%= f.text_field :address, size: 30, placeholder: 'Address 2' %> <br /> 
                 </div>
-                <div class="field">
-                  <%= f.label :pay_type %><br>
-                  <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Select a payment method' %>
-                </div>
-      
                 
-            <div class="actions">
-                <%= f.submit 'Place Order' %>
+                <div class="field">
+                  <%= f.text_field :address, size: 30, placeholder: 'City/Town' %> <br />
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :address, size: 30, placeholder: 'County' %> <br />
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :address, size: 30, placeholder: 'Postcode' %> <br />
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :email, size: 30, placeholder: 'Email: e.g. john@example.com' %>
+                </div>
+
+                <br>
+                <div class="panel">
+                <h3 class="text-center">Payment</h3>
+                <hr>
+
+                <div class="field">
+                  <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Please select' %>
+                </div>
+
+                <%= f.fields_for :cards do |f| %>
+                <div class="field">
+                  <%= f.text_field :name, placeholder: 'Cardholder name: e.g. John Smith' %>
+                </div>              
+
+                <div class="field">
+                  <%= f.text_field :number, placeholder: 'Card number: e.g. 4242 4242 4242 4242' %>
+                </div>
+
+                <div class="field expiry_date pull-left">
+                <%= f.label :expiry_date %>:
+                  <%= f.text_field :expire_month, placeholder: 'mm', class: 'text-center' %>&nbsp;<%= f.text_field :expire_year, placeholder: 'yy', class: 'text-center', size: 2 %>
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :cvv, size: 30, placeholder: 'CVV' %>
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :address, size: 30, placeholder: 'Billing Address 1' %>
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :address, size: 30, placeholder: 'Billing Address 2' %>
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :address, size: 30, placeholder: 'City/Town' %>
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :address, size: 30, placeholder: 'County' %>
+                </div>
+
+                <div class="field">
+                  <%= f.text_field :address, size: 30, placeholder: 'Postcode' %>
+                </div>
+                </div>
+                <% end %>
+                
+            <div class="actions text-center">
+                <%= f.submit 'Checkout', class: 'btn' %>
             </div>
         </div>
       <% end %>
   </div>
-</div>
