--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
   <% end %>
 
   <br>
-  	<div class="text-center new_product">
-  	<%= link_to 'New Product', new_product_path %>
+  	<div class="center-block new_product">
+  	<%= link_to 'New Product', new_product_path, class: 'btn' %>
 	</div>
 </div>
