--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,30 +3,15 @@
   <h4 class="modal-title" id="exampleModalLabel">Product Details</h4>
 </div>
 <div class="modal-body">
-  <%= image_tag @product.image_url(:large).to_s %>
+  
+  <%= image_tag @product.secimage_url(:large).to_s, class: 'lgcurrent jp' %>
+  <!-- <#a href="#" class=" arrow arrow-prev" ><img class="arrow prev" src="/images/arrow-prev.png"></a> -->
+  <%= image_tag @product.image_url(:large).to_s, class: 'lg active-slide jp' %>
+  <!-- <a href="#" class="arow arrow-next" ><img class="arrow next" src="/images/arrow-next.png"></a> -->
   <p><strong><%= @product.title %></strong></p>
-  <p><%= @product.description %></p>
-  <p>
-    <strong>Quantity:</strong>
-    <%= @product.quantity %>
-  </p>
-  <p>
-    <strong>Category:</strong>
-    <%= @product.category %>
-  </p>
-  <p>
-    <strong>Subcategory:</strong>
-    <%= @product.subcategory %>
-  </p>
-  <p>
-    <strong>Price:</strong>
-    £<%= @product.price %>
-  </p>
-  <p>
-    <strong>Delivery Price:</strong>
-    £<%= @product.delivery_price %>
-  </p>
+  <p class="description"><%= simple_format(@product.description) %></p>
+
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+<!--<#%= link_to 'Add to Cart', line_items_path(product_id: product) %> -->
 </div>
