--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -8,14 +8,29 @@
       <%= devise_error_messages! %>
       
         <div class="field">
+          <%= f.label :name %><br />
+          <%= f.text_field :name, autofocus: true %>
+        </div>
+
+        <div class="field">
           <%= f.label :username %><br />
-          <%= f.text_field :username, autofocus: true %>
+          <%= f.text_field :username %>
         </div>  
 
         <div class="field">
           <%= f.label :email %><br />
           <%= f.email_field :email %>
         </div>
+
+        <div class="field">
+            <%= f.label :bio %><br>
+            <%= f.text_area :bio %>
+          </div>
+
+          <div class="field">
+            <%= f.label :image %><br>
+            <%= f.file_field :image %>
+          </div>
 
         <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
@@ -36,36 +51,18 @@
           <%= f.password_field :current_password, autocomplete: "off" %>
         </div>
 
-        <%= f.fields_for :store do |sf| %>
-          <%= sf.hidden_field :id %>
-          <div class="field">
-            <%= sf.label :image %><br>
-            <%= sf.file_field :image %>
-          </div>
-
-          <% if resource.store.image? %>
+          <% if resource.image? %>
             <div class="field">
-              <%= image_tag(resource.store.image_url(:avatar).to_s, class: 'img-circle') %>
-              <%= sf.hidden_field :image_cache %>
+              <%= image_tag(resource.image_url(:avatar).to_s, class: 'img-circle') %>
+              <%= f.hidden_field :image_cache %>
             </div>
 
             <div class="field">
-                <%= sf.label :remove_image %>
-                <%= sf.check_box :remove_image %>
+                <%= f.label :remove_image %>
+                <%= f.check_box :remove_image %>
             </div>
           <% end %>
-
-          <div class="field">
-            <%= sf.label :brand_bio %><br>
-            <%= sf.text_area :brand_bio %>
-          </div>
-
-          <div class="field">
-            <%= sf.label :brand_name %><br />
-            <%= sf.text_field :brand_name %>
-          </div>
-
-        <% end %>
+        
 
         <div class="actions">
           <%= f.submit "Update" %>
