--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -7,30 +7,27 @@
       <%= devise_error_messages! %>
 
       <div class="field">
-        <%= f.label :username %><br />
-        <%= f.text_field :username, autofocus: true %>
+        <%= f.text_field :username, placeholder: 'Username', autofocus: true %>
         <%= f.hidden_field :role, value: 'customer' %>
       </div>
 
       <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email %>
+        <%= f.email_field :email, placeholder: 'Email' %>
       </div>
 
       <div class="field">
-        <%= f.label :password %>
+      <%= f.password_field :password, placeholder: 'Password',autocomplete: "off" %><br />
         <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "off" %>
+        <em>(Must be <%= @minimum_password_length %> characters or more)</em>
+        <% end %>
+        
       </div>
 
       <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "off" %>
+        <%= f.password_field :password_confirmation, placeholder: 'Password Confirmation', autocomplete: "off" %>
       </div>
 
-      <div class="actions">
+      <div class="actions reg">
         <%= f.submit "Sign up", class: 'btn' %>
       </div>
     <% end %> 
