--- a/app/views/customer/partners/index.html.erb
+++ b/app/views/customer/partners/index.html.erb
@@ -1,5 +1,5 @@
-<div class="well" style="margin-right:auto;margin-left:auto; max-width:800px;">
-  <h1 class="text-center">Partners</h1>
+<div class="well part-well" style="margin-right:auto;margin-left:auto; max-width:800px;">
+  <h1 class="part text-center">Partners</h1>
     <% @partners.each do |partner| %>
     	<div class="row index" style="display: inline-block;">
     		<%= link_to profile_path(partner.username) do %>
