--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,4 +1,4 @@
-      <%= form_for(@order) do |f| %>
+      <%= form_for @order, :html => { :multipart => true } do |f| %>
         <% if @order.errors.any? %>
           <div id="error_explanation">
             <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
@@ -16,28 +16,33 @@
           <h1 class="panel-title text-center">Shipping Details</h1>
         </div>
         <div class="panel-body order_form">
+              
                <div class="field name">
                   <%= f.text_field :name, size: 30, placeholder: 'Name: e.g. John Smith' %>
                 </div>
+                <%= f.hidden_field :store_id, value: :store_id %>
+                <%= fields_for :address do |f| %>
                 <div class="field">
-                  <%= f.text_field :address, size: 30, placeholder: 'Address 1' %>
+                  <%= f.text_field :line_one, size: 30, placeholder: 'Address 1' %>
                 </div>
 
                 <div class="field">
-                  <%= f.text_field :address, size: 30, placeholder: 'Address 2' %> <br /> 
+                  <%= f.text_field :line_two, size: 30, placeholder: 'Address 2' %> <br /> 
                 </div>
                 
                 <div class="field">
-                  <%= f.text_field :address, size: 30, placeholder: 'City/Town' %> <br />
+                  <%= f.text_field :town, size: 30, placeholder: 'City/Town' %> <br />
                 </div>
 
                 <div class="field">
-                  <%= f.text_field :address, size: 30, placeholder: 'County' %> <br />
+                  <%= f.text_field :county, size: 30, placeholder: 'County' %> <br />
                 </div>
 
                 <div class="field">
-                  <%= f.text_field :address, size: 30, placeholder: 'Postcode' %> <br />
+                  <%= f.text_field :postcode, size: 30, placeholder: 'Postcode' %> <br />
                 </div>
+
+                <% end %>
 
                 <div class="field">
                   <%= f.text_field :email, size: 30, placeholder: 'Email: e.g. john@example.com' %>
@@ -49,7 +54,7 @@
                 <hr>
 
                 <div class="field">
-                  <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Please select' %>
+                  <%= f.select :pay_type, Order::PAYMENT_TYPES, prompt: 'Please Select' %>
                 </div>
 
                 <%= f.fields_for :cards do |f| %>
