--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -65,7 +65,7 @@
         
 
         <div class="actions">
-          <%= f.submit "Update" %>
+          <%= f.submit "Update", class: 'btn' %>
         </div>
 
       <br/>
