--- a/app/views/users/invitations/new.html.erb
+++ b/app/views/users/invitations/new.html.erb
@@ -1,3 +1,4 @@
+<div class="invitation text-center">
 <h2><%= t "devise.invitations.new.header" %></h2>
 
 <%= form_for resource, :as => resource_name, :url => invitation_path(resource_name), :html => {:method => :post} do |f| %>
@@ -9,5 +10,6 @@
   <%= f.hidden_field :role, value: 'partner' %>
 <% end -%>
 
-  <p><%= f.submit t("devise.invitations.new.submit_button") %></p>
+  <p><%= f.submit t("devise.invitations.new.submit_button"), class: 'btn' %></p>
 <% end %>
+</div>
